fix vertical alignment of invite friends in circles

--- a/assets/less/views/circles.less
+++ b/assets/less/views/circles.less
@@ -109,11 +109,11 @@
 		width: 100%;
 		@media @desktop {
 			min-height: 100px;
-			line-height: 95px;
+			line-height: 100px;
 		}
 		@media @mobile {
 			min-height: 75px;
-			line-height: 60px;
+			line-height: 75px;
 		}
 		text-align: center;
 		border-radius: 0;
